[workspace]
members = [
  "motsu",
  "motsu-proc",
]
default-members = [
  "motsu",
  "motsu-proc",
]

# Explicitly set the resolver to version 2, which is the default for packages
# with edition >= 2021.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "ethereum", "stylus"]

[workspace.dependencies]
# stylus-related
stylus-sdk = { version = "=0.6.0", default-features = false }
stylus-proc = { version = "=0.6.0", default-features = false }

# alloy-primitives
alloy-primitives = { version = "0.7.6", default-features = false }
alloy-sol-types = { version = "0.7.6", default-features = false }

# other
const-hex = { version = "1.11.1", default-features = false }
once_cell = "1.19.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# procedural macros
syn = { version = "2.0.58", features = ["full"] }
proc-macro2 = "1.0.79"
quote = "1.0.35"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"
