[package]
name = "motsu-proc"
description = "Mostu's Procedural Macros"
edition.workspace = true
keywords.workspace = true
license.workspace = true
version = "0.1.0"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
motsu = { path = "../motsu" }
stylus-sdk.workspace = true
stylus-proc.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true


[lib]
proc-macro = true
